--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
       z-index: 1;
     }
     .scroll-button {
-    background: #ff8888;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 16px;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: "Helvetica Neue", sans-serif;
-    cursor: pointer;
-  }
+      background: #ff8888;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      padding: 8px 16px;
+      font-size: 16px;
+      font-weight: bold;
+      font-family: "Helvetica Neue", sans-serif;
+      cursor: pointer;
+    }
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
 
@@ -78,7 +78,7 @@
       box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
       z-index: 999;
     }
-  
+
     td:first-child, th:first-child {
       position: sticky;
       left: 0;
@@ -86,66 +86,36 @@
       z-index: 2;
     }
 
-
-  .filters button {
-    background: #ff8888;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 16px;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: "Helvetica Neue", sans-serif;
-    cursor: pointer;
-  }
-
-
-  .filters button {
-    background: #ff8888;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 16px;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: "Helvetica Neue", sans-serif;
-    cursor: pointer;
-  }
-
-
-  
-
-
-  button {
-    background: #ff8888;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 16px;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: "Helvetica Neue", sans-serif;
-    cursor: pointer;
-  }
-
-</style>
+    .filters button {
+      background: #ff8888;
+      color: white;
+      border: none;
+      border-radius: 12px;
+      padding: 10px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      font-family: "Helvetica Neue", sans-serif;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 <body>
   <h1>ロト7結果検索ツール</h1>
-
   <nav style="margin-bottom: 16px;">
     <a href="https://po-3.github.io/loto6-data/" style="margin-right: 12px;">🔗 ロト6</a>
     <a href="https://po-3.github.io/miniloto-data/">🔗 ミニロト</a>
   </nav>
-
   <p>開催回・日付・抽選数字の特徴などで直感的に検索できます。</p>
-
   <div class="filters" style="display: flex; flex-direction: column; flex-wrap: wrap;">
     <label>開催回 From: <input type="number" id="fromRound" min="1"></label>
     <label>To: <input type="number" id="toRound" min="1"></label>
     <label>開催日 From: <input type="date" id="fromDate"></label>
     <label>To: <input type="date" id="toDate"></label>
-    
     <div style="display: flex; flex-wrap: wrap; gap: 8px;">
       <label><input type="checkbox" class="feature" value="連番あり"> 連番あり</label>
       <span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
@@ -170,115 +140,5 @@
     </div>
     <button onclick="filterResults()">🔍 検索</button>
   </div>
-
-  <div class="scroll-container" id="scrollContainer">
-    <table id="resultTable">
-      <thead>
-        <tr>
-          <th>開催回</th><th>日付</th><th>本数字</th><th>ボーナス</th><th>特徴</th>
-          <th>1等賞金</th><th>1等口数</th><th>2等賞金</th><th>2等口数</th>
-          <th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th>
-          <th>5等賞金</th><th>5等口数</th><th>6等賞金</th><th>6等口数</th><th>キャリーオーバー</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
-  <button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
-  
-  <div id="popupBox" class="popup" style="display:none; position:absolute;"></div>
-  <script>
-    function showPopup(event, text) {
-      const popup = document.getElementById("popupBox");
-      popup.textContent = text;
-      popup.style.display = "block";
-      popup.style.left = (event.pageX + 10) + "px";
-      popup.style.top = (event.pageY + 10) + "px";
-    }
-
-    function hidePopup() {
-      document.getElementById("popupBox").style.display = "none";
-    }
-
-    document.addEventListener("click", function(e) {
-      if (!e.target.classList.contains("info-icon")) {
-        hidePopup();
-      }
-    });
-  </script>
-
-
-<script>
-  let data = [];
-
-  function formatYen(value) {
-    if (value === "" || value === null || value === undefined) return "0円";
-    if (isNaN(value)) return "-";
-    const intVal = parseInt(value);
-    return isNaN(intVal) ? value : intVal.toLocaleString() + "円";
-  }
-
-  async function loadData() {
-    const res = await fetch("./loto7.json");
-    data = await res.json();
-    renderTable(data);
-  }
-
-  function renderTable(filteredData) {
-    const tbody = document.querySelector("#resultTable tbody");
-    tbody.innerHTML = "";
-    filteredData.forEach(item => {
-      const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]].join("・");
-      const bonus = [item["BONUS数字1"], item["BONUS数字2"]].join("・");
-      const row = `
-        <tr>
-          <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${bonus}</td><td>${item["特徴"] || ""}</td>
-          <td>${formatYen(item["1等賞金"])}</td><td>${item["1等口数"]}</td>
-          <td>${formatYen(item["2等賞金"])}</td><td>${item["2等口数"]}</td>
-          <td>${formatYen(item["3等賞金"])}</td><td>${item["3等口数"]}</td>
-          <td>${formatYen(item["4等賞金"])}</td><td>${item["4等口数"]}</td>
-          <td>${formatYen(item["5等賞金"])}</td><td>${item["5等口数"]}</td>
-          <td>${formatYen(item["6等賞金"])}</td><td>${item["6等口数"]}</td>
-          <td>${formatYen(item["キャリーオーバー"])}</td>
-        </tr>`;
-      tbody.insertAdjacentHTML("beforeend", row);
-    });
-  }
-
-  function filterResults() {
-    const fromRound = parseInt(document.getElementById("fromRound").value) || 1;
-    const toRound = parseInt(document.getElementById("toRound").value) || 9999;
-    const fromDate = document.getElementById("fromDate").value;
-    const toDate = document.getElementById("toDate").value;
-    const checked = Array.from(document.querySelectorAll(".feature:checked")).map(el => el.value);
-
-    const filtered = data.filter(item => {
-      const round = parseInt(item["開催回"]);
-      const date = item["日付"];
-      const inRound = round >= fromRound && round <= toRound;
-      const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
-      const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
-      return inRound && inDate && hasFeature;
-    });
-
-    renderTable(filtered);
-  }
-
-  function scrollTableToTop() {
-    document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
-  }
-
-  function scrollTableToBottom() {
-    const container = document.getElementById("scrollContainer");
-    container.scrollTo({ top: container.scrollHeight, behavior: "smooth" });
-  }
-
-  document.addEventListener("DOMContentLoaded", () => {
-    loadData();
-  });
-</script>
 </body>
-
 </html>
