--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
       z-index: 2;
     }
 
+
+.filters button {
+  background-color: #ff8888;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Helvetica Neue", sans-serif;
+  border: none;
+  border-radius: 12px;
+  padding: 10px 24px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
 </style>
 </head>
 <body>
