--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-
 <!DOCTYPE html>
+
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ミニロト結果検索</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>ロト7結果検索ツール</title>
+<style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
       padding: 20px;
@@ -47,31 +47,22 @@
       z-index: 1;
     }
     .scroll-button {
-      position: fixed;
-      right: 10px;
-      padding: 8px 12px;
-      font-size: 13px;
-      background: #ff8888;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      opacity: 0.9;
-    }
+    background: #ff8888;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
+    border: none;
+    border-radius: 12px;
+    padding: 10px 24px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+  }
     #scrollTopBtn { bottom: 70px; }
     #scrollBottomBtn { bottom: 20px; }
-
-    button {
-      background: #ff8888;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      padding: 6px 12px;
-      font-size: 14px;
-    }
-    button:hover {
-      background-color: #cc6666;
-    }
 
     .info-icon {
       display: inline-block;
@@ -79,8 +70,6 @@
       cursor: pointer;
       font-size: 14px;
       color: #e26580;
-      font-weight: normal;
-      user-select: none;
     }
 
     .popup {
@@ -94,116 +83,89 @@
       box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
       z-index: 999;
     }
-  </style>
+  
+    td:first-child, th:first-child {
+      position: sticky;
+      left: 0;
+      background: #fff0f0;
+      z-index: 2;
+    }
+
+
+.filters button {
+  background-color: #ff8888;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Helvetica Neue", sans-serif;
+  border: none;
+  border-radius: 12px;
+  padding: 10px 24px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+</style>
 </head>
 <body>
-  <h1>ミニロト結果検索ツール</h1>
-  <p>開催回・日付・抽選数字の特徴などで直感的に検索できます。</p>
 
-  <div class="filters">
-    <label>開催回 From: <input type="number" id="fromRound" min="1"></label>
-    <label>To: <input type="number" id="toRound" min="1"></label>
-    <label>開催日 From: <input type="date" id="fromDate"></label>
-    <label>To: <input type="date" id="toDate"></label>
+<h1>ロト7結果検索ツール</h1>
 
-    <div>
-      <label><input type="checkbox" class="feature" value="連番"> 連番</label>
-      <span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
+<nav style="margin-bottom: 16px;">
+  <a href="https://po-3.github.io/loto6-data/" style="margin-right: 12px;">🔗 ロト6</a>
+  <a href="https://po-3.github.io/miniloto-data/">🔗 ミニロト</a>
+</nav>
 
-      <label><input type="checkbox" class="feature" value="奇数多め"> 奇数多め</label>
-      <span class="info-icon" onclick="showPopup(event, '奇数が4個以上含まれる構成です。')">ⓘ</span>
-
-      <label><input type="checkbox" class="feature" value="偶数多め"> 偶数多め</label>
-      <span class="info-icon" onclick="showPopup(event, '偶数が4個以上含まれる構成です。')">ⓘ</span>
-
-      <label><input type="checkbox" class="feature" value="バランス型"> バランス型</label>
-      <span class="info-icon" onclick="showPopup(event, '奇数と偶数がほぼ均等に含まれる構成です。')">ⓘ</span>
-
-      <label><input type="checkbox" class="feature" value="下一桁かぶり"> 下一桁かぶり</label>
-      <span class="info-icon" onclick="showPopup(event, '同じ下一桁の数字が2個以上（例：11・21など）含まれる構成です。')">ⓘ</span>
-
-      <label><input type="checkbox" class="feature" value="合計小さめ"> 合計小さめ</label>
-      <span class="info-icon" onclick="showPopup(event, '本数字の合計が60未満の構成です。')">ⓘ</span>
-
-      <label><input type="checkbox" class="feature" value="合計大きめ"> 合計大きめ</label>
-      <span class="info-icon" onclick="showPopup(event, '本数字の合計が80以上の構成です。')">ⓘ</span>
-    </div>
-    <button onclick="filterResults()">🔍 検索</button>
-  </div>
-
-  <div class="scroll-container" id="scrollContainer">
-    <table id="resultTable">
-      <thead>
-        <tr>
-          <th>開催回</th><th>日付</th><th>本数字</th><th>ボーナス</th><th>特徴</th>
-          <th>1等賞金</th><th>1等口数</th><th>2等賞金</th><th>2等口数</th>
-          <th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
-  <button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
-
-  <div id="popupBox" class="popup"></div>
-
-  <script>
-    let data = [];
-
-    async function loadData() {
-      const res = await fetch("miniloto_data_for_web_with_features.json");
-      data = await res.json();
-      renderTable(data);
-    }
-
-    function formatYen(value) {
-      const intVal = parseInt(value);
-      if (isNaN(intVal)) return value;
-      
-      const str = intVal.toLocaleString() + "円";
-      return str;
-    
-    }
-
-    function renderTable(filteredData) {
-      const tbody = document.querySelector("#resultTable tbody");
-      tbody.innerHTML = "";
-      filteredData.forEach(item => {
-        const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"]].join("・");
-        const row = `
-          <tr>
-            <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${item["BONUS数字"]}</td><td>${item["特徴"]}</td>
-            <td title="${formatYen(item["1等賞金"])}">${formatYen(item["1等賞金"])}</td>
-            <td>${parseInt(item["1等口数"]).toLocaleString()}</td><td title="${formatYen(item["2等賞金"])}">${formatYen(item["2等賞金"])}</td>
-            <td>${parseInt(item["2等口数"]).toLocaleString()}</td><td title="${formatYen(item["3等賞金"])}">${formatYen(item["3等賞金"])}</td>
-            <td>${parseInt(item["3等口数"]).toLocaleString()}</td><td title="${formatYen(item["4等賞金"])}">${formatYen(item["4等賞金"])}</td>
-            <td>${parseInt(item["4等口数"]).toLocaleString()}</td>
-          </tr>`;
-        tbody.insertAdjacentHTML("beforeend", row);
-      });
-    }
-
-    function filterResults() {
-      const fromRound = parseInt(document.getElementById("fromRound").value) || 1;
-      const toRound = parseInt(document.getElementById("toRound").value) || 9999;
-      const fromDate = document.getElementById("fromDate").value;
-      const toDate = document.getElementById("toDate").value;
-      const checked = Array.from(document.querySelectorAll(".feature:checked")).map(el => el.value);
-
-      const filtered = data.filter(item => {
-        const round = parseInt(item["開催回"]);
-        const date = item["日付"];
-        const inRound = round >= fromRound && round <= toRound;
-        const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
-        const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
-        return inRound && inDate && hasFeature;
-      });
-
-      renderTable(filtered);
-    }
-
+<p>開催回・日付・抽選数字の特徴などで直感的に検索できます。</p>
+<div class="filters">
+<label>開催回 From: <input id="fromRound" min="1" type="number"/></label>
+<label>To: <input id="toRound" min="1" type="number"/></label>
+<label>開催日 From: <input id="fromDate" type="date"/></label>
+<label>To: <input id="toDate" type="date"/></label>
+<div>
+<label><input class="feature" type="checkbox" value="連番あり"/> 連番あり</label>
+<span class="info-icon" onclick="showPopup(event, '連続した数字（例：24・25など）を含む構成です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="奇数多め"/> 奇数多め</label>
+<span class="info-icon" onclick="showPopup(event, '奇数が5個以上含まれる構成です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="偶数多め"/> 偶数多め</label>
+<span class="info-icon" onclick="showPopup(event, '偶数が5個以上含まれる構成です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="下一桁かぶり"/> 下一桁かぶり</label>
+<span class="info-icon" onclick="showPopup(event, '同じ下一桁の数字が2個以上（例：11・21など）含まれる構成です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="合計小さめ"/> 合計小さめ</label>
+<span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が160未満の回です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="合計大きめ"/> 合計大きめ</label>
+<span class="info-icon" onclick="showPopup(event, '7つの本数字の合計が200を超える回です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="10番台集中"/> 10番台集中</label>
+<span class="info-icon" onclick="showPopup(event, '10〜19の数字が3つ以上含まれる構成です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="30番台多め"/> 30番台多め</label>
+<span class="info-icon" onclick="showPopup(event, '30〜37の数字が3つ以上含まれる構成です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="高低ミックス"/> 高低ミックス</label>
+<span class="info-icon" onclick="showPopup(event, '10未満と30超の数字が両方含まれる構成です。')">ⓘ</span>
+<label><input class="feature" type="checkbox" value="キャリーあり"/> キャリーあり</label>
+<span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
+</div>
+<button onclick="filterResults()">🔍 検索</button>
+</div>
+<div class="scroll-container" id="scrollContainer">
+<table id="resultTable">
+<thead>
+<tr>
+<th>開催回</th><th>日付</th><th>本数字</th><th>ボーナス</th><th>特徴</th>
+<th>1等賞金</th><th>1等口数</th><th>2等賞金</th><th>2等口数</th>
+<th>3等賞金</th><th>3等口数</th><th>4等賞金</th><th>4等口数</th>
+<th>5等賞金</th><th>5等口数</th><th>6等賞金</th><th>6等口数</th><th>キャリーオーバー</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</div>
+<button class="scroll-button" id="scrollTopBtn" onclick="scrollTableToTop()">⬆ 最上段へ</button>
+<button class="scroll-button" id="scrollBottomBtn" onclick="scrollTableToBottom()">⬇ 最下段へ</button>
+<div class="popup" id="popupBox" style="display:none; position:absolute;"></div>
+<script>
     function showPopup(event, text) {
       const popup = document.getElementById("popupBox");
       popup.textContent = text;
@@ -221,21 +183,75 @@
         hidePopup();
       }
     });
-
-    function scrollTableToTop() {
-      document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
-    }
-    function scrollTableToBottom() {
-      const container = document.getElementById("scrollContainer");
-      container.scrollTo({ top: container.scrollHeight, behavior: "smooth" });
-    }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      loadData();
-      setTimeout(() => {
-        document.getElementById("scrollContainer").scrollTop = 0;
-      }, 150);
-    });
   </script>
+<script>
+  let data = [];
+
+  function formatYen(value) {
+    if (value === "" || value === null || value === undefined) return "0円";
+    if (isNaN(value)) return "-";
+    const intVal = parseInt(value);
+    return isNaN(intVal) ? value : intVal.toLocaleString() + "円";
+  }
+
+  async function loadData() {
+    const res = await fetch("./loto7.json");
+    data = await res.json();
+    renderTable(data);
+  }
+
+  function renderTable(filteredData) {
+    const tbody = document.querySelector("#resultTable tbody");
+    tbody.innerHTML = "";
+    filteredData.forEach(item => {
+      const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]].join("・");
+      const bonus = [item["BONUS数字1"], item["BONUS数字2"]].join("・");
+      const row = `
+        <tr>
+          <td>${item["開催回"]}</td><td>${item["日付"]}</td><td>${nums}</td><td>${bonus}</td><td>${item["特徴"] || ""}</td>
+          <td>${formatYen(item["1等賞金"])}</td><td>${item["1等口数"]}</td>
+          <td>${formatYen(item["2等賞金"])}</td><td>${item["2等口数"]}</td>
+          <td>${formatYen(item["3等賞金"])}</td><td>${item["3等口数"]}</td>
+          <td>${formatYen(item["4等賞金"])}</td><td>${item["4等口数"]}</td>
+          <td>${formatYen(item["5等賞金"])}</td><td>${item["5等口数"]}</td>
+          <td>${formatYen(item["6等賞金"])}</td><td>${item["6等口数"]}</td>
+          <td>${formatYen(item["キャリーオーバー"])}</td>
+        </tr>`;
+      tbody.insertAdjacentHTML("beforeend", row);
+    });
+  }
+
+  function filterResults() {
+    const fromRound = parseInt(document.getElementById("fromRound").value) || 1;
+    const toRound = parseInt(document.getElementById("toRound").value) || 9999;
+    const fromDate = document.getElementById("fromDate").value;
+    const toDate = document.getElementById("toDate").value;
+    const checked = Array.from(document.querySelectorAll(".feature:checked")).map(el => el.value);
+
+    const filtered = data.filter(item => {
+      const round = parseInt(item["開催回"]);
+      const date = item["日付"];
+      const inRound = round >= fromRound && round <= toRound;
+      const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
+      const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
+      return inRound && inDate && hasFeature;
+    });
+
+    renderTable(filtered);
+  }
+
+  function scrollTableToTop() {
+    document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
+  }
+
+  function scrollTableToBottom() {
+    const container = document.getElementById("scrollContainer");
+    container.scrollTo({ top: container.scrollHeight, behavior: "smooth" });
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    loadData();
+  });
+</script>
 </body>
 </html>
