--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 <span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
 </div>
 <button onclick="filterResults()">🔍 検索</button>
+<p id="resultCount" style="margin-top: 10px; font-weight: bold;"></p>
 </div>
 <div class="scroll-container" id="scrollContainer">
 <table id="resultTable">
@@ -244,6 +245,7 @@
     });
 
     renderTable(filtered);
+    document.getElementById("resultCount").textContent = `検索結果：${filtered.length} 件`;
   }
 
   function scrollTableToTop() {
