--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ function featureQuickSearch(feature) {
 
       const dates = data.map(item => item["日付"]).sort();
       const latest = dates[dates.length - 1];
-      document.getElementById("lastUpdated").textContent = `最終更新日：${latest}`;
+      document.getElementById("lastUpdated").textContent = `データ更新日：${latest} ｜ツールVer：1.01`;
 
   }
 
@@ -309,7 +309,7 @@ function featureQuickSearch(feature) {
 
       const dates = data.map(item => item["日付"]).sort();
       const latest = dates[dates.length - 1];
-      document.getElementById("lastUpdated").textContent = `最終更新日：${latest}`;
+      document.getElementById("lastUpdated").textContent = `データ更新日：${latest} ｜ツールVer：1.01`;
 
   }
 
